--- a/about.html
+++ b/about.html
@@ -3,6 +3,5 @@ layout: default
 ---
 
 <div class="well">
-    <h1>About me</h1>
-    <p>Hello, I am me.</p>
+    <div class='contact'></div>
 </div>
