--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ layout: default
 <div class="article">
     <div class="well">
         <h1><a href="{{ site.baseurl}}{{ post.url }}"> {{ post.title }}</a></h1>
-        <div class="date">{{ post.date | date: "%Y.%m.%d" }}</div>
+        <div class="date">{{ post.date | date: "%Y.%m.%d" }}<br>{{post.author}}</div>
 
         {% if site.comments == true and post.comments == true and site.disqus != '' %}
           <p class="author"><a href="{{ site.baseurl }}{{ post.url }}/#disqus_thread">Comments</a></p>
